native_implementation/pluggins/newest_nwbfile_plugin/lib/nwbfile_plugin_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

import 'dart:ffi' as ffi;
import 'dart:ffi';

// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names

class NwbfilePluginBindings {
  final ffi.DynamicLibrary _dylib;

  NwbfilePluginBindings(this._dylib);

  // Basic math functions
  int sum(int a, int b) => _dylib.lookupFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32), int Function(int, int)>('sum')(a, b);
  
  int sum_long_running(int a, int b) => _dylib.lookupFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32), int Function(int, int)>('sum_long_running')(a, b);

  // int processing_update(Pointer<Char> path) => _dylib.lookupFunction<ffi.Int32 Function(Pointer<Char>), int Function(Pointer<Char>)>('processing_update')(path);

  // NWB processing functions
  int processing_init(Pointer<Char> path, int sampleRate, int channelCount, Pointer<Char> deviceInfo, Pointer<Char> deviceManufacturer) => _dylib.lookupFunction<ffi.Int32 Function(Pointer<Char>, ffi.Int32, ffi.Int32, Pointer<Char>, Pointer<Char>), int Function(Pointer<Char>, int, int, Pointer<Char>, Pointer<Char>)>('processing_init')(path, sampleRate, channelCount, deviceInfo, deviceManufacturer);
  int nwbfile_add_electrical_series(Pointer<Int16> inSamples, Pointer<Int32> samplesCount, int selectedChannel, int channelCount, int isFinishRecording) => _dylib.lookupFunction<ffi.Int32 Function(Pointer<Int16>, Pointer<Int32>, ffi.Int32, ffi.Int32, ffi.Int32), int Function(Pointer<Int16>, Pointer<Int32>, int, int, int)>('nwbfile_add_electrical_series')(inSamples, samplesCount, selectedChannel, channelCount, isFinishRecording);

  /// Returns new EventsTable row index (>= 0), or -1 on failure.
  int nwbfile_add_event(double timestampSeconds, int eventLabel) =>
      _dylib.lookupFunction<
          ffi.Int32 Function(ffi.Float, ffi.Int32),
          int Function(double, int)>('nwbfile_add_event')(
        timestampSeconds,
        eventLabel,
      );

  /// Returns 0 on success, -1 on failure.
  int nwbfile_update_event(int rowIndex, double timestampSeconds, int eventLabel) =>
      _dylib.lookupFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Float, ffi.Int32),
          int Function(int, double, int)>('nwbfile_update_event')(
        rowIndex,
        timestampSeconds,
        eventLabel,
      );

  /// Soft-deletes the EventsTable row. Returns 0 on success, -1 on failure.
  int nwbfile_delete_event(int rowIndex) =>
      _dylib.lookupFunction<ffi.Int32 Function(ffi.Int32), int Function(int)>(
          'nwbfile_delete_event')(rowIndex);

  int nwbfile_read_electrical_series(Pointer<Int16> outSamples, Pointer<Int32> outSampleCounts, int selectedChannel, int channelCount) => _dylib.lookupFunction<ffi.Int32 Function(Pointer<Int16>, Pointer<Int32>, ffi.Int32, ffi.Int32), int Function(Pointer<Int16>, Pointer<Int32>, int, int)>('nwbfile_read_electrical_series')(outSamples, outSampleCounts, selectedChannel, channelCount);

  int nwbfile_seek_electrical_series(Pointer<Char> path, Pointer<Int16> outSamples, Pointer<Int32> outSampleCounts, Pointer<Int32> outConfig, int startTimeStamp, int endTimeStamp, int startChannel, int endChannel) => _dylib.lookupFunction<ffi.Int32 Function(Pointer<Char>, Pointer<Int16>, Pointer<Int32>, Pointer<Int32>, ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32), int Function(Pointer<Char>, Pointer<Int16>, Pointer<Int32>, Pointer<Int32>, int, int, int, int)>('nwbfile_seek_electrical_series')(path, outSamples, outSampleCounts, outConfig, startTimeStamp, endTimeStamp, startChannel, endChannel);
  
  int get_nwb_file_size() => _dylib.lookupFunction<ffi.Int32 Function(), int Function()>('get_nwb_file_size')();
  
  int get_nwb_file_data(ffi.Pointer<ffi.Char> buffer, int buffer_size) => _dylib.lookupFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Int32), int Function(ffi.Pointer<ffi.Char>, int)>('get_nwb_file_data')(buffer, buffer_size);
  
  void cleanup_nwb_data() => _dylib.lookupFunction<ffi.Void Function(), void Function()>('cleanup_nwb_data')();
}
